@@ -7,6 +7,7 @@ Changelog
 * [Feature] Add `deployment-logs` command to get logs for a specific deployment
 * [Feature] Add `deployment-follow` command to follow the deployment stream for an application
 * [Feature - Create] --buildpack flag to specify a custom buildpack
+* [Fix] Fix error handling when an addon fails to get provisioned #252
 
 ### v1.3.1 - 02/05/2016
 
